--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -1,25 +1,35 @@
 @page {
     size: 45mm 35mm;
     margin: 1px !important;
-    padding 0px !important;
+    padding: 0px !important;
 }
 body {
     font-family: Helvetica, Arial;
     color:#000 !important;
+    margin:0;
+    padding:1px;
 }
 .large-font {
     font-size:8pt !important;
 }
 .small-font {
-    font-size:4pt !important;
+    font-size:6pt !important;
 }
-
 table {
     border-collapse:collapse;
     width:100%;
     margin:0;
     padding:0;
+    border:1px solid #ddd;
 }
 td {
     padding: 1px;
+    padding:0;
+}
+.barcode {
+    font-size:4pt;
+    padding:0;
+    position:absolute;
+    top:28mm;
+    margin:2px 0 0 0;
 }
