Update label formatting

--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -17,7 +17,7 @@ body {
 }
 table {
     border-collapse:collapse;
-    width:100%;
+    width:45mm;
     margin:0;
     padding:0;
     border:1px solid #ddd;
