--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -1,16 +1,22 @@
 @page {
-    size: 45mm 35mm;
-    margin: 1px !important;
+    size: 48mm 38mm;
+    margin: 0px !important;
     padding: 0px !important;
 }
-body {
+.sticker {
     font-family: Helvetica, Arial;
-    color:#000 !important;
-    margin:0;
-    padding:1px;
+    font-size:6pt;
+    width: 45mm;
+    max-width: 45mm;
+    height: 35mm;
+    max-height: 35mm;
+}
+.stickerbody {
+    height:27mm;
+    max-height:27mm;
 }
 .large-font {
-    font-size:8pt !important;
+    font-size:9pt !important;
 }
 .small-font {
     font-size:6pt !important;
@@ -22,14 +28,30 @@ table {
     padding:0;
     border:1px solid #ddd;
 }
-td {
-    padding: 1px;
-    padding:0;
+
+.sticker .row-1 {
+    text-align:center;
+    padding-bottom:1px;
+    height:2em !important;
 }
+
+.sticker .row-2 {
+    text-align:center;
+    padding-bottom:1px;
+    height:2em !important;
+}
+
+.sticker .row-3 {
+    text-align:center;
+    padding-bottom:1px;
+    height:2em !important;
+}
+
+.sticker .row-4 {
+    text-align:center;
+}
+
 .barcode {
-    font-size:4pt;
-    padding:0;
-    position:absolute;
-    top:28mm;
-    margin:2px 0 0 0;
+  margin-top:4px;
+  text-align:center;
 }
