stickers: comment out debugging border of table

--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -26,7 +26,7 @@ table {
     width:45mm;
     margin:0;
     padding:0;
-    border:1px solid #ddd;
+    /*border:1px solid #ddd;*/
 }
 
 .sticker .row-1 {
