--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -1,3 +1,13 @@
+@page {
+    size: 44mm 34mm;
+    margin: 0mm 0mm 0mm 0mm;
+    padding: 0mm 0mm 0mm 0mm;
+}
+
+td {
+    text-align:center;
+}
+
 .sticker {
     font-family: Helvetica, Arial;
     font-size:6pt;
@@ -15,8 +25,3 @@
     width:100%;
 }
 
-@page {
-    size: 44mm 34mm;
-    margin: 0mm 0mm 0mm 0mm;
-    padding: 0mm 0mm 0mm 0mm;
-}
