AN-105: Barcode does not scan (Use inline BMP for barcodes)
Use larger BMP, and allow html to compress it.

--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -26,6 +26,9 @@
     width: 42mm !important;
     padding:0 1mm 0 0;
 }
+.barcode object {
+    width: 42mm !important;
+}
 
 .sticker table {
     border-collapse: collapse;
